module/core/former/tests/inc/former_enum_tests/compile_fail/mod.rs
// Declare compile-fail test modules for enum variants.

// Uncomment modules as they are addressed in increments.

// mod struct_zero_default_error;
// mod struct_zero_subform_scalar_error;
// mod tuple_multi_subform_scalar_error;
// mod tuple_single_subform_non_former_error;
// mod tuple_zero_subform_scalar_error;
// mod unit_subform_scalar_error;

mod subform_collection_test;

// qqq : Add declarations for other compile-fail tests as they are implemented.